--- a/src/Home.css
+++ b/src/Home.css
@@ -3,3 +3,15 @@
   padding: 30px;
   justify-content: space-evenly;
 }
+
+@media only screen and (max-width: 850px) {
+  .home__section {
+    flex-wrap: wrap;
+  }
+}
+
+@media only screen and (max-width: 400px) {
+  .home__section {
+    padding: 10px;
+  }
+}
