--- a/src/Search.css
+++ b/src/Search.css
@@ -3,6 +3,7 @@
   top: 35px;
   left: 25%;
   width: 100vw;
+  z-index: 100;
 }
 
 .search > h2 {
@@ -44,4 +45,11 @@
 .search > button:hover {
   background-color: white;
   color: #ff7779;
+}
+
+@media only screen and (max-width: 850px) {
+  .search {
+    width: 0%;
+    left: 0%;
+  }
 }
