--- a/src/SearchResult.css
+++ b/src/SearchResult.css
@@ -70,3 +70,23 @@
   bottom: 20px;
   right: 30px;
 }
+
+@media only screen and (max-width: 600px) {
+  .searchResult {
+    flex-direction: column;
+  }
+  .searchResult > img {
+    width: 100%;
+    height: 300px;
+  }
+
+  .searchResult__heart {
+    top: 30px;
+  }
+}
+
+@media only screen and (max-width: 400px) {
+  .searchResult {
+    margin: 0;
+  }
+}
